fixed mistake from last commit. Now correct spacing without affecting single <p> elements

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -717,8 +717,12 @@ h6:before {
   margin-left: -3.7em;
 }
 
+li p {
+        margin-bottom: 0px;
+}
+
 p {
-  margin-bottom: 0px;
+  margin-bottom: 20px;
 }
 
 a {
